<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.gadau.warcraftmock.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            style="@style/TitleScreenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
        <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_single" />
        <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_multi" />
        <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_options" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:textColor="@color/yellow"
        android:text="@string/sample_version_name"/>
</RelativeLayout>
